[gd_scene load_steps=3 format=3 uid="uid://b7sjgaja45pqh"]

[ext_resource type="Theme" uid="uid://r5ryo3vp6pej" path="res://themes/main_theme.tres" id="1_k3i0h"]
[ext_resource type="Script" path="res://source/main_menu.gd" id="2_j5gq6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_k3i0h")
script = ExtResource("2_j5gq6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "Game"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="NameEdit" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Player Name"

[node name="CreateButton" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 40)
layout_mode = 2
text = "Create Game"

[node name="JoinButton" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 40)
layout_mode = 2
text = "Join Game"

[node name="AddressEdit" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Address"

[node name="ExitButton" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 40)
layout_mode = 2
text = "Exit Game"

[connection signal="text_changed" from="VBoxContainer/VBoxContainer/NameEdit" to="." method="_on_name_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="text_submitted" from="VBoxContainer/VBoxContainer/AddressEdit" to="." method="_on_address_edit_text_submitted"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
